# YDBRust

./: .dockerignore  .gitignore  .gitlab-ci.yml  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  pre-commit  test.sh  wrapper.h
benches/: db_set.rs
examples/: game_persistence_demo.rs  infinite_loop_no_handler.rs  random_walk.rs  sayHelloRust.rs  say_hello_rust.rs  say_hello_simple_api.rs  threenp1.rs  wordfreq.rs  xyzInitRust.rs  xyzTransRust.rs  xyzVerifyRust.rs
examples/m-ffi/: add.m  calltab.ci  exit.m  external.xc  helloworld1.m  helloworld2.m  noop.m  small_calltab.ci  zshvar.ci  zshvar.m
src/: lib.rs
src/context_api/: call_in.rs  mod.rs  tests.rs
src/craw/: mod.rs
src/simple_api/: call_in.rs  mod.rs  tests.rs
tests/: acculturation_workshop.rs  call_after_exit.rs  copyright.sh  exit_before_init.rs  infinite_inv_str.rs  invalid_exit.rs  needs_copyright.sh
