[package]
name = "yottadb"
version = "0.3.0"
authors = ["Charles Hathaway <charles@yottadb.com>", "Joshua Nelson <joshua@yottadb.com>"]
edition = "2018"

description = "Rust wrappers for the NoSQL database YottaDB"
license = "AGPL-3.0-only"
repository = "https://gitlab.com/YottaDB/Lang/YDBRust"
homepage = "https://yottadb.com/"
documentation = "https://yottadb.gitlab.io/Lang/YDBRust/yottadb/"
readme = "README.md"

[dependencies]

[build-dependencies]
pkg-config = "0.3"

[build-dependencies.bindgen]
version = "0.53"
default-features = false
features = ['runtime']

[dev-dependencies]
threadpool = "1.7"
rand = "0.7"
num_cpus = "1"
tokio = { version = "0.2", features = ["rt-core"], default-features = false }
proptest = "0.9"
serial_test = "0.4"

[dev-dependencies.sdl2]
version = "0.33"
features = ["gfx", "ttf"]
