#################################################################
#								#
# Copyright (c) 2019-2020 YottaDB LLC and/or its subsidiaries.	#
# All rights reserved.						#
#								#
#	This source code contains the intellectual property	#
#	of its copyright holder(s), and is made available	#
#	under a license.  If you do not know the terms of	#
#	the license, please stop and do not read further.	#
#								#
#################################################################

[package]
name = "yottadb"
version = "0.3.0"
authors = ["YottaDB, LLC <info@yottadb.com>"]
edition = "2018"

description = "Rust wrappers for the NoSQL database YottaDB"
license = "AGPL-3.0-only"
repository = "https://gitlab.com/YottaDB/Lang/YDBRust"
homepage = "https://yottadb.com/"
documentation = "https://yottadb.gitlab.io/Lang/YDBRust/yottadb/"
readme = "README.md"

[dependencies]

[build-dependencies]
pkg-config = "0.3"

[profile.release]
opt-level = 3
debug = false

# The only dependencies YDBRust has are build dependencies on bindgen and pkg-config.
# These execute basically instantaneously, so there is no need to optimize them.
# NOTE: we cannot use `build-override` because we support back to 1.34
# and build-override was only stabilized in 1.41.
[profile.release.package."*"]
opt-level = 0

[build-dependencies.bindgen]
version = "0.53"
default-features = false
features = ['runtime']

[dev-dependencies]
threadpool = "1.7"
rand = "0.7"
num_cpus = "1"
tokio = { version = "0.2", features = ["rt-core"], default-features = false }
proptest = "0.9"
serial_test = "0.4"

[dev-dependencies.sdl2]
version = "0.33"
features = ["gfx", "ttf"]
